<resources>
    <string name="app_name">Talon</string>
    <string name="app_name_full">Talon for Twitter</string>
    <string name="extension_description">Displays the number of unread tweets, mentions and direct messages as they are updated.</string>
    <string name="menu_refresh">Refresh Timeline</string>
    <string name="menu_compose">New Tweet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_follow">Follow User</string>
    <string name="menu_unfollow">Un-Follow User</string>
    <string name="menu_tweet">Send Tweet</string>
    <string name="menu_dm">Send Direct Message</string>
    <string name="menu_block">Block User</string>
    <string name="menu_unblock">Unblock User</string>
    <string name="menu_add_to_list">Add to List</string>
    <string name="menu_change_picture">Change Profile Picture</string>
    <string name="menu_change_bio">Change Profile Info</string>
    <string name="menu_change_banner">Change Profile Banner</string>
    <string name="menu_direct_message">New Direct Message</string>
    <string name="menu_save_image">Save Image</string>
    <string name="menu_favorite">Favorite User</string>
    <string name="menu_unfavorite">Un-Favorite User</string>
    <string name="menu_create_list">Create New List</string>
    <string name="menu_spam">Mark as Spam</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">a minute ago</string>
    <string name="minutes_ago">%s minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%s days ago</string>
    <string name="mute">Mute</string>
    <string name="unmute">Un-Mute</string>
    <string name="muted_users">Muted Users</string>
    <string name="no_users">No Users</string>
    <string name="links">Links</string>
    <string name="pictures">Pictures</string>
    <string name="timeline">Home</string>
    <string name="mentions">Mentions</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="retweets">Retweets</string>
    <string name="favorite_tweets">Liked Tweets</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="favorite_users_tweets">Favorite User Tweets</string>
    <string name="trends">Trending</string>
    <string name="local_trends">Local</string>
    <string name="world_trends">World</string>
    <string name="search">Search</string>
    <string name="lists">Lists</string>
    <string name="search_hint">Search...</string>
    <string name="new_tweet">new tweet</string>
    <string name="new_tweets">new tweets</string>
    <string name="no_new_tweets">No new tweets</string>
    <string name="new_mention">new mention</string>
    <string name="new_mentions">new mentions</string>
    <string name="no_new_mentions">No new mentions</string>
    <string name="new_direct_message">new direct message</string>
    <string name="new_direct_messages">new direct messages</string>
    <string name="no_new_direct_messages">No new direct messages</string>
    <string name="tap_to_setup">Tap to setup</string>
    <string name="new_account">New Account</string>
    <string name="from_top">from top</string>
    <string name="jump_to_top">To First</string>
    <string name="all_read">All Read!</string>
    <string name="view_new">Load?</string>
    <string name="old_interactions">All Interactions</string>
    <string name="tweet">Tweet</string>
    <string name="tweets">Tweets</string>
    <string name="mention">Mention</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">new message</string>
    <string name="new_messages">new messages</string>
    <string name="mentioned_by">Mentioned by</string>
    <string name="message_from">Message from</string>
    <string name="mark_read">Read</string>
    <string name="noti_reply">Reply</string>
    <string name="popup">Popup</string>
    <string name="fav_user_tweets">new favorite user tweets</string>
    <string name="sec_acc">Second Account</string>
    <string name="talon_pull">Talon Pull</string>
    <string name="talon_pull_summary">WARNING: Enabling this option can cause significant battery drain on Android Lollipop.</string>
    <string name="listening">Listening</string>
    <string name="listening_for_mentions">Listening for interactions</string>
    <string name="refreshing">Refreshing</string>
    <string name="refreshing_widget">Refreshing widget</string>
    <string name="downloading">Downloading</string>
    <string name="new_interaction_upper">New Interaction</string>
    <string name="new_interactions_lower">new interactions</string>
    <string name="new_interactions">New Interactions</string>
    <string name="retweeted">retweeted your status</string>
    <string name="favorited">liked your status</string>
    <string name="quoted">quoted your status</string>
    <string name="followed">followed you</string>
    <string name="new_retweets">retweets</string>
    <string name="new_favorites">likes</string>
    <string name="new_quotes">quotes</string>
    <string name="new_tweets_upper">New Tweets</string>
    <string name="setup_talon">Setup Talon</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="first_welcome">Welcome to Talon!</string>
    <string name="second_welcome">Syncing Data</string>
    <string name="third_welcome">That\'s it - enjoy!</string>
    <string name="back_to_timeline">Take me to my timeline!</string>
    <string name="initial_sync">Sync Now!</string>
    <string name="other_options">Other Options</string>
    <string name="enable_emojis">Use iOS emojis</string>
    <string name="sync_settings">Background Refreshes</string>
    <string name="sync_mobile_data">Sync Over Mobile Data</string>
    <string name="sync_mobile_data_summary">Auto-refresh timelines over both mobile data and WiFi.</string>
    <string name="notifications">Notifications</string>
    <string name="quiet_hours">Do Not Disturb Mode</string>
    <string name="max_number_on_refresh">Max Tweets to Refresh</string>
    <string name="fav_users_notifications">Favorite User Notifications</string>
    <string name="sync_second_mentions">Sync Second Account</string>
    <string name="sync_second_mentions_summary">Automatically check and notify for new mentions and direct messages on your second account along with the first.</string>
    <string name="max_number_summary">Higher max means a slower refresh.</string>
    <string name="auto_refresh_category">Auto-Refresh Options</string>
    <string name="refresh_on_startup">Refresh on Startup</string>
    <string name="timeline_sync_interval">Home Timeline Refresh Rate</string>
    <string name="mentions_sync_interval">Mentions Refresh Rate</string>
    <string name="dm_sync_interval">Direct Messages Refresh Rate</string>
    <string name="sync_friends">Sync Friends Data</string>
    <string name="sync_friends_summary2">Re-sync friends data to use when composing tweets.</string>
    <string name="push_notification_options">"\"Push Notification\" Options"</string>
    <string name="push_notification_warning">To read more about Talon Pull, click this preference.</string>
    <string name="notification_settings">Notifications</string>
    <string name="pebble_notifications">Pebble Notifications</string>
    <string name="pebble_notifications_summary">Used for the Pebble smart watch. Disable this if you are getting two notifications on your watch.</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="memory_management">Memory Management Options</string>
    <string name="delete_cache">Delete Cache Now</string>
    <string name="timeline_size">Home Size</string>
    <string name="timeline_size_summary">Max number of tweets to store in the database.</string>
    <string name="mentions_size">Mentions Size</string>
    <string name="mentions_size_summary">Max number of mentions to store in the database.</string>
    <string name="dm_size">Direct Messages Size</string>
    <string name="dm_size_summary">Max number of direct messages to store in the database.</string>
    <string name="backup_category">Backup and Restore Options</string>
    <string name="backup_settings">Backup Settings</string>
    <string name="restore_settings">Restore Settings</string>
    <string name="restore_settings_summary">Will clear the cache to apply any theme changes.</string>
    <string name="rerun_tutorial">Run Startup Tutorial</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="features_explained">Features Explained</string>
    <string name="youtube">YouTube Video</string>
    <string name="google_plus">Google+ Community</string>
    <string name="email_me">Email Me</string>
    <string name="tweet_me">Tweet at Me</string>
    <string name="follow_talon">Follow Talon on Twitter</string>
    <string name="credits">Credits</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="notification_types">Notification Types</string>
    <string name="with_talon_pull">Accessed through \"Talon Pull\".</string>
    <string name="clear_searches">Clear Searches</string>
    <string name="ignore_retweets">Ignore Retweets</string>
    <string name="ignore_retweets_summary">Do not display any retweets while scrolling your main timelines.</string>
    <string name="muted_hashtags">Muted Hashtags</string>
    <string name="muted_hashtags_summary">Click hashtag to remove the mute.</string>
    <string name="auto_insert_hashtags">Auto-Insert Hashtags</string>
    <string name="to_replies">Insert any hashtags contained in the tweet into the reply.</string>
    <string name="clean_now">Clean Databases Now</string>
    <string name="clean_now_summary">Includes trimming and removing duplicates in your database.</string>
    <string name="fill_gaps">Fill Timeline Gaps</string>
    <string name="fill_gaps_summary">Fill gaps that occur from a bad streaming connection while live streaming is enabled.</string>
    <string name="our_website">Website</string>
    <string name="alert_types">Alert Methods</string>
    <string name="timeline_notifications">Timeline Notifications</string>
    <string name="interactions_notifications">Interaction Notifications</string>
    <string name="timelines_settings">Timelines Settings</string>
    <string name="custom_ringtone">Custom Ringtone</string>
    <string name="use_twitpic">Use TwitPic</string>
    <string name="use_tweetmarker">TweetMarker</string>
    <string name="jumping_workaround">Jumping Workaround</string>
    <string name="jumping_workaround_summary">Enable this if your timeline jumps down one spot after you refresh your feed.</string>
    <string name="configure_pages">Choose Swipe-able Pages</string>
    <string name="mute_expression">Mute Expression</string>
    <string name="view_muted_expressions">Remove Muted Expressions</string>
    <string name="regex_disclaimer">Muting too many expressions may affect startup and refresh times.</string>
    <string name="third_party_services">Third Party Services</string>
    <string name="ui_settings">UI Settings</string>
    <string name="show_muted_mentions">Show Muted Mentions</string>
    <string name="pre_cache_images">Pre-Cache Images</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="memory_manage">App Memory</string>
    <string name="muted_rts">Muted Retweeters</string>
    <string name="muted_clients">Muted Clients</string>
    <string name="muted_clients_summary">Allows you to mute all tweets coming from a specific application.</string>
    <string name="fetch_tweetmarker">Fetch TweetMarker</string>
    <string name="quote_style">Quote Style</string>
</resources>