<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="memory_management"
        android:title="@string/memory_management">

        <ListPreference
            android:key="timeline_size"
            android:title="@string/timeline_size"
            android:summary="@string/timeline_size_summary"
            android:defaultValue="500"
            android:entries="@array/timeline_size"
            android:entryValues="@array/timeline_size"
            />

        <ListPreference
            android:key="mentions_size"
            android:title="@string/mentions_size"
            android:summary="@string/mentions_size_summary"
            android:defaultValue="100"
            android:entries="@array/mentions_size"
            android:entryValues="@array/mentions_size"
            />

        <ListPreference
            android:key="dm_size"
            android:title="@string/dm_size"
            android:summary="@string/dm_size_summary"
            android:defaultValue="100"
            android:entries="@array/mentions_size"
            android:entryValues="@array/mentions_size"
            />

        <Preference
            android:key="trim_now"
            android:title="@string/clean_now"
            android:summary="@string/clean_now_summary"
            />

        <Preference
            android:key="delete_cache"
            android:title="@string/delete_cache"
            />

        <Preference
            android:key="clear_searches"
            android:title="@string/clear_searches"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="backup_category"
        android:title="@string/backup_category">

        <Preference
            android:key="backup"
            android:title="@string/backup_settings"
            />

        <Preference
            android:key="restore"
            android:title="@string/restore_settings"
            android:summary="@string/restore_settings_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>