<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <Preference
            android:key="manage_mutes"
            android:title="@string/muted_users"
            />

        <Preference
            android:key="manage_mutes_rt"
            android:title="@string/muted_rts"
            />

        <Preference
            android:key="manage_mutes_hashtags"
            android:title="@string/muted_hashtags"
            android:summary="@string/muted_hashtags_summary"
            />

        <Preference
            android:key="manage_muted_clients"
            android:title="@string/muted_clients"
            android:summary="@string/muted_clients_summary"
            />

        <Preference
            android:key="mute_regex"
            android:title="@string/mute_expression"
            android:summary="@string/regex_disclaimer"
            />

        <Preference
            android:key="manage_regex_mute"
            android:title="@string/view_muted_expressions"
            />

        <CheckBoxPreference
            android:key="ignore_retweets"
            android:title="@string/ignore_retweets"
            android:summary="@string/ignore_retweets_summary"
            android:defaultValue="false"
            />

        <CheckBoxPreference
            android:key="show_muted_mentions"
            android:title="@string/show_muted_mentions"
            android:defaultValue="false"
            />

</PreferenceScreen>