<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="tutorial"
        android:title="@string/rerun_tutorial" />

    <Preference
        android:key="faq"
        android:title="@string/faq" />

    <Preference
        android:key="features"
        android:title="@string/features_explained" />

    <Preference
        android:key="klinkerapps"
        android:title="@string/our_website" >
        <intent android:action="android.intent.action.VIEW"
            android:data="http://klinkerapps.com" />
        </Preference>

    <Preference
        android:key="youtube"
        android:title="@string/youtube" />

    <Preference
        android:key="google_plus"
        android:title="@string/google_plus" />

    <Preference
        android:key="email_me"
        android:title="@string/email_me" />

    <Preference
        android:key="tweet_me"
        android:title="@string/tweet_me" />

    <Preference
        android:key="follow_talon"
        android:title="@string/follow_talon" />

    <Preference
        android:key="credits"
        android:title="@string/credits" />

</PreferenceScreen>