<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="third_party"
        android:title="@string/third_party_services" >

        <ListPreference
            android:key="tweetmarker_options"
            android:title="@string/use_tweetmarker"
            android:defaultValue="0"
            android:entries="@array/tweetmarker"
            android:entryValues="@array/tweetmarker_inserted"
            />

        <CheckBoxPreference
            android:key="twitpic"
            android:title="@string/use_twitpic"
            android:summary="@string/twitpic_summary_l"
            android:defaultValue="false"
            />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="advanced_other"
        android:title="@string/other_options" >

        <Preference
            android:key="pages"
            android:title="@string/configure_pages"
            />


        <ListPreference
            android:key="quote_style"
            android:title="@string/quote_style"
            android:defaultValue="0"
            android:entries="@array/quote_style"
            android:entryValues="@array/quote_style_inserted"
            />

        <CheckBoxPreference
            android:key="top_down_mode"
            android:title="@string/top_down"
            android:summary="@string/top_down_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
                android:key="use_emojis"
                android:title="@string/enable_emojis"
                android:summary="@string/emojis_summary"
                android:defaultValue="false"
                />

        <CheckBoxPreference
            android:key="auto_insert_hashtags"
            android:title="@string/auto_insert_hashtags"
            android:summary="@string/to_replies"
            android:defaultValue="false"
            />

        <CheckBoxPreference
            android:key="jumping_workaround"
            android:title="@string/jumping_workaround"
            android:summary="@string/jumping_workaround_summary"
            android:defaultValue="false"
            />

    </PreferenceCategory>

</PreferenceScreen>