<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_dismiss"
        android:orderInCategory="1"
        android:title="@string/dismiss_all"
        android:showAsAction="always"
        android:icon="@drawable/ic_cancel_dark"/>

    <item android:id="@+id/menu_search"
        android:orderInCategory="2"
        android:title="@string/search"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_search_dark"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_compose"
          android:orderInCategory="3"
          android:title="@string/menu_compose"
          android:showAsAction="always"
          android:icon="@drawable/ic_send_dark" />

    <item android:id="@+id/menu_notifications"
        android:orderInCategory="4"
        android:title="@string/notifications"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_notification_none_dark" />

    <item android:id="@+id/menu_direct_message"
          android:orderInCategory="5"
          android:title="@string/menu_direct_message"
          android:showAsAction="never" />

    <item android:id="@+id/menu_settings"
          android:orderInCategory="6"
          android:title="@string/menu_settings"
          android:showAsAction="never" />

    <item android:id="@+id/menu_to_first"
        android:orderInCategory="7"
        android:title="@string/jump_to_top"
        android:showAsAction="never" />

    <item android:id="@+id/menu_tweetmarker"
          android:orderInCategory="8"
          android:title="@string/fetch_tweetmarker"
          android:showAsAction="never" />

</menu>